# hold_and_weld

./: .gitignore  .pre-commit-config.yaml  README.md
hold_and_weld_application/: CMakeLists.txt  package.xml
hold_and_weld_application/action/: ExecuteGripper.action  ExecuteWeld.action  TriggerGripper.action  TriggerWelder.action
hold_and_weld_application/config/system/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  trajectory_execution.yaml
hold_and_weld_application/config/tasks/: pick_place_targets.yaml  welding.yaml
hold_and_weld_application/include/hold_and_weld_application/action_servers/: gripper_action_server.hpp  welder_action_server.hpp
hold_and_weld_application/include/hold_and_weld_application/coordinator/: dual_robot_coordinator.hpp
hold_and_weld_application/launch/: system.launch.py
hold_and_weld_application/scripts/utils/: add_collision_objects.py
hold_and_weld_application/src/action_servers/: gripper_action_server.cpp  gripper_server_main.cpp  welder_action_server.cpp  welder_server_main.cpp
hold_and_weld_application/src/coordinator/: coordinator_main.cpp  dual_robot_coordinator.cpp
hold_and_weld_description/: CMakeLists.txt  package.xml
hold_and_weld_description/config/: controllers.yaml  dual_robot.srdf
hold_and_weld_description/meshes/gp25/visual/: base_link.dae  link_1_s.dae  link_2_l.dae  link_3_u.dae  link_4_r.dae  link_5_b.dae  link_6_t.dae
hold_and_weld_description/rviz/: moveit.rviz
hold_and_weld_description/urdf/: dual_robot.xacro
hold_and_weld_description/urdf/end_effectors/: gripper_prefix.xacro  welding_torch_prefix.xacro
hold_and_weld_description/urdf/environment/: cube.urdf.xacro  prism.urdf.xacro  workpiece.urdf.xacro
hold_and_weld_description/urdf/extra_axis/: linear_rail_prefix.xacro
hold_and_weld_description/urdf/robots/: gp25_arm_prefix.xacro
hold_and_weld_description/worlds/: bringup_world.world
hold_and_weld_planning/: package.xml  setup.cfg  setup.py
hold_and_weld_planning/config/: weld_config.yaml
hold_and_weld_planning/hold_and_weld_planning/: __init__.py  line_segment.py  path_utils.py  seam.py  seam_generator.py  weld_planner.py
